--- a/flames.html
+++ b/flames.html
@@ -415,21 +415,21 @@
       fire(0.2, {
         spread: 60,
       });
-      fire(0.35, {
-        spread: 100,
-        decay: 0.91,
-        scalar: 0.8,
-      });
-      fire(0.1, {
-        spread: 120,
-        startVelocity: 25,
-        decay: 0.92,
-        scalar: 1.2,
-      });
-      fire(0.1, {
-        spread: 120,
-        startVelocity: 45,
-      });
+      // fire(0.35, {
+      //   spread: 100,
+      //   decay: 0.91,
+      //   scalar: 0.8,
+      // });
+      // fire(0.1, {
+      //   spread: 120,
+      //   startVelocity: 25,
+      //   decay: 0.92,
+      //   scalar: 1.2,
+      // });
+      // fire(0.1, {
+      //   spread: 120,
+      //   startVelocity: 45,
+      // });
     };
   </script>
 </html>
